[gd_scene load_steps=6 format=2]

[ext_resource path="res://Testing/AxisArrows.tscn" type="PackedScene" id=1]
[ext_resource path="res://Testing/TrackOutputInterpretationTest.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.996078, 0, 0, 0.317647 )

[node name="TrackOutputInterpretationTest" type="Spatial"]
script = ExtResource( 2 )

[node name="WebcamDummy" parent="." instance=ExtResource( 1 )]
script = null

[node name="TargetDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="DistanceSphere" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 1.25765e-07, -3.00592e-07, 0, 0.922511, 0.38597, 3.25841e-07, 0.38597, -0.922511, 0, 1.902, -3 )

[node name="Tween" type="Tween" parent="."]
